fdo#65718 : fix for exporting of image distance from text

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx

Change-Id: Id33a9d491b2d89b05189b566641dadcef3176dc3